language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_block_unwraps_a_single_expression_in_a_binop.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n    { main(1) } * 3\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
    { main(1) } * 3
      ↑            
}


----- AFTER ACTION
pub fn main(x) {
     main(1)  * 3
}
