language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  echo 1 + 2\n}"
---
----- BEFORE ACTION
pub fn main() {
  echo 1 + 2
  ↑         
}


----- AFTER ACTION
pub fn main() {
  1 + 2
}
