language-server/src/tests/snapshots/gleam_language_server__tests__action__remove_echo_last_in_long_pipeline_step.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  [1, 2, 3]\n  |> wibble\n  |> echo\n}"
---
----- BEFORE ACTION
pub fn main() {
  [1, 2, 3]
  |> wibble
  |> echo
     ↑   
}


----- AFTER ACTION
pub fn main() {
  [1, 2, 3]
  |> wibble
}
